--- a/views/host/host-home-list.ejs
+++ b/views/host/host-home-list.ejs
@@ -34,9 +34,11 @@
                                     <a href="/host/edit-home/<%= home.id %>/?editing=true" class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-300 ml-4 flex-shrink-0">
                                         Edit
                                     </a>
-                                    <a href="/host/delete-home/<%= home.id %>" class="bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-300 ml-4 flex-shrink-0">
-                                        Delete
-                                    </a>
+                                    <form action="/host/delete-home/<%= home.id %>" method="POST" class="inline">
+                                        <button type="submit" class="bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-300 ml-4 flex-shrink-0">
+                                            Delete
+                                        </button>
+                                    </form>
                                 </div>
                             </li>
                         <% }) %>
