--- a/views/partials/favourite.ejs
+++ b/views/partials/favourite.ejs
@@ -1,5 +1,5 @@
 <form action="/favourites" method="POST" class="mr-3">
-    <input type="hidden" name="homeId" value="<%= home.id %>">
+    <input type="hidden" name="homeId" value="<%= home._id %>">
     <button type="submit" style="background-color: #10B981; width: 100%;"
         class="bg-green-500 hover:bg-green-600 text-white py-2 px-4 rounded-lg font-semibold">
         Add to Favourites ♥
