--- a/views/host/host-home-list.ejs
+++ b/views/host/host-home-list.ejs
@@ -31,10 +31,10 @@
                                             <div class="col-span-2"><strong>Amenities:</strong> <%= home.amenities %></div>
                                         </div>
                                     </div>
-                                    <a href="/host/edit-home/<%= home.id %>/?editing=true" class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-300 ml-4 flex-shrink-0">
+                                    <a href="/host/edit-home/<%= home._id %>/?editing=true" class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-300 ml-4 flex-shrink-0">
                                         Edit
                                     </a>
-                                    <form action="/host/delete-home/<%= home.id %>" method="POST" class="inline">
+                                    <form action="/host/delete-home/<%= home._id %>" method="POST" class="inline">
                                         <button type="submit" class="bg-red-500 hover:bg-red-600 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-300 ml-4 flex-shrink-0">
                                             Delete
                                         </button>
