--- a/views/store/home-list.ejs
+++ b/views/store/home-list.ejs
@@ -31,7 +31,7 @@
                                             <div class="col-span-2"><strong>Amenities:</strong> <%= home.amenities %></div>
                                         </div>
                                     </div>
-                                    <a href="/homes/<%= home.id %>" class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-300 ml-4 flex-shrink-0">Details</a>
+                                    <a href="/homes/<%= home._id %>" class="bg-blue-500 hover:bg-blue-600 text-white font-medium py-2 px-4 rounded-lg transition-colors duration-300 ml-4 flex-shrink-0">Details</a>
                                     <%- include('../partials/favourite.ejs', {home: home}) %>
                                 </div>
                             </li>
