--- a/14-airbnb-mongodb-with-mongoose/views/host/edit-home.ejs
+++ b/14-airbnb-mongodb-with-mongoose/views/host/edit-home.ejs
@@ -4,7 +4,7 @@
     <%- include('../partials/nav') %>
     <main class="container mx-auto mt-8 p-8 bg-white rounded-lg shadow-md">
       <h1 class="text-3xl font-bold mb-6 text-center text-gray-800"><%= editing ? "Edit" : "Register"%> Your Home on AirBnB</h1>
-      <form action="/host/<%= editing ? "edit-home" : "add-home"%>" method="POST" class="max-w-md mx-auto">
+      <form action="/host/<%= editing ? "edit-home" : "add-home"%>" enctype="multipart/form-data" method="POST" class="max-w-md mx-auto">
         <input type="hidden" name="id" value="<%= editing ? home._id : ''%>" />
         <input
           type="text"
@@ -30,12 +30,23 @@
           value="<%= editing ? home.rating : ''%>"
           placeholder="Rating"
           class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500"/>
-        <input
-          type="text"
-          name="photoUrl"
-          value="<%= editing ? home.photoUrl : ''%>"
-          placeholder="Enter Photo URL"
-          class="w-full px-4 py-2 mb-4 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500"/>
+        
+        <% if (editing && home.photo) { %>
+          <div class="mb-4">
+            <p class="mb-2 text-gray-700">Current Photo:</p>
+            <img src="<%= home.photo %>" alt="<%= home.houseName %>" class="w-full h-48 object-cover mb-2 rounded">
+            <input type="hidden" name="existingPhoto" value="<%= home.photo %>">
+          </div>
+        <% } %>
+        
+        <div class="mb-4">
+          <label class="block text-gray-700 mb-2">Upload New Photo:</label>
+          <input
+            type="file"
+            name="photo"
+            accept="image/*"
+            class="w-full px-4 py-2 border rounded-md focus:outline-none focus:ring-2 focus:ring-red-500"/>
+        </div>
         <textarea
           name="description"
           placeholder="Describe your home"
